--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,10 @@ main {
   width: 100%;
   height: 100%;
   display: block;
+  touch-action: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  user-select: none;
 }
 
 .bg-fluid {
@@ -805,6 +809,23 @@ main {
 @media (max-width: 960px) {
   .hero-inner {
     grid-template-columns: 1fr;
+    gap: 32px;
+  }
+
+  .hero-badge {
+    order: -1;
+    height: 200px;
+    margin-bottom: 20px;
+  }
+
+  .badge {
+    width: 140px;
+    height: 140px;
+  }
+
+  .avatar {
+    width: 112px;
+    height: 112px;
   }
 
   .grid-2 {
@@ -817,6 +838,20 @@ main {
 }
 
 @media (max-width: 640px) {
+  .hero-badge {
+    height: 180px;
+  }
+
+  .badge {
+    width: 120px;
+    height: 120px;
+  }
+
+  .avatar {
+    width: 96px;
+    height: 96px;
+  }
+
   .cards {
     grid-template-columns: 1fr;
   }
