--- a/styles.css
+++ b/styles.css
@@ -1186,6 +1186,7 @@ main {
   gap: 16px;
   align-items: center;
   text-align: center;
+  min-height: 360px;
 }
 
 /* Game Grid - 1 item per row on desktop */
@@ -1204,6 +1205,9 @@ main {
 .misc-content {
   flex: 1;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .misc-content h3 {
@@ -1225,7 +1229,7 @@ main {
 }
 
 .misc-content .cta {
-  margin-top: 10px;
+  margin-top: auto;
 }
 
 .misc-media {
